--- a/catalogo.html
+++ b/catalogo.html
@@ -85,7 +85,7 @@
         </div>
         <div class="item">
             <h2>BIG BODY CS TEE</h2>
-            <img src="img/bege.png" alt="Descrição da roupa 2">
+            <img src="https://www.nocta.com/cdn/shop/files/TEE_HEMP_2_38869a14-12fc-4fe2-be02-887a43979054_1200x@2x.jpg?v=1708547548" alt="Descrição da roupa 2">
             <img src="img/bege1.png" alt="Descrição da roupa 2">
             <img src="img/bege2.png" alt="Descrição da roupa 2">
             <img src="img/bege3.png" alt="Descrição da roupa 2">
