--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p> </p>
         <div class="tendencias">
             <div class="tendencia">
-                <img src="img/nike.png" alt="Tendência 1">
+                <img src="https://www.nike.com.br/jaqueta-nike-sportswear-club-puffer-masculina-028177.html?cor=ID#pid6" alt="Tendência 1">
             
              <p> </p>   
             </div>
