--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p> </p>
         <div class="tendencias">
             <div class="tendencia">
-                <img src="https://www.nike.com.br/jaqueta-nike-sportswear-club-puffer-masculina-028177.html?cor=ID#pid6" alt="Tendência 1">
+                <img src="https://www.nocta.com/cdn/shop/files/TEE_HEMP_4_eb2b2bf1-7087-4923-a741-8e74a349486e_1200x@2x.jpg?v=1708547548" alt="Tendência 1">
             
              <p> </p>   
             </div>
