--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
              <p> </p>   
             </div>
             <div class="tendencia">
-                <img src="img/cut.png" alt="Tendência 2">
+                <img src="https://www.nocta.com/cdn/shop/files/VEST_3_1200x@2x.jpg?v=1683859785" alt="Tendência 2">
                 
               <p> </p>  
             </div>
             <div class="tendencia">
-                <img src="img/moleta.png" alt="Tendência 3">
+                <img src="https://www.nocta.com/cdn/shop/files/CPT_5_1200x@2x.jpg?v=1701721005" alt="Tendência 3">
                 
                <p> </p> 
             </div>
         <div class="tendencia">
-            <img src="img/bone.png" alt="Tendência 4">
+            <img src="https://www.nocta.com/cdn/shop/files/DV3653-479_328499628_0015_c4f27e36-40d5-4dd0-a7e6-10cd0370c10b_1200x@2x.jpg?v=1699041050" alt="Tendência 4">
             <p> </p>
         </div>
         </div>
