--- a/catalogo.html
+++ b/catalogo.html
@@ -35,12 +35,12 @@
         <div class="item">
             <h2> THE STREET x NOCTA
                 Woven Track Jacket</h2>
-            <img src="img/verdin.png" alt="Descrição da roupa 2">
-            <img src="img/verdin1.png" alt="Descrição da roupa 2">
-            <img src="img/verdin2.png" alt="Descrição da roupa 2">
-            <img src="img/verdin3.png" alt="Descrição da roupa 2">
-            <img src="img/verdin4.png" alt="Descrição da roupa 2">
-            <img src="img/verdin5.png" alt="Descrição da roupa 2">
+            <img src="https://www.nocta.com/cdn/shop/files/TRACK_JACKET_GREEN_2_dd1709e3-e7f4-4c0d-869b-f45446df29ed_1200x@2x.jpg?v=1708547478" alt="Descrição da roupa 2">
+            <img src="https://www.nocta.com/cdn/shop/files/TRACK_JACKET_GREEN_3_2fdf23ca-aa04-48f1-a173-1bacd14e8154_1200x@2x.jpg?v=1708547478" alt="Descrição da roupa 2">
+            <img src="https://www.nocta.com/cdn/shop/files/TRACK_JACKET_GREEN_4_f39e71dc-9307-4147-9c1c-c49711c4cae5_1200x@2x.jpg?v=1708547478" alt="Descrição da roupa 2">
+            <img src="https://www.nocta.com/cdn/shop/files/TRACK_JACKET_GREEN_5_abf687cf-c591-4225-aa75-4bfc748ce191_1200x@2x.jpg?v=1708547479" alt="Descrição da roupa 2">
+            <img src="https://www.nocta.com/cdn/shop/files/TRACK_JACKET_GREEN_6_347c40d7-702b-4ade-b613-9b1c5606df7b_1200x@2x.jpg?v=1708547478" alt="Descrição da roupa 2">
+            <img src="https://www.nocta.com/cdn/shop/files/TRACKJACKET-GREEN_1200x@2x.png?v=1707257497" alt="Descrição da roupa 2">
             
             <p>Equipe-se com uma jaqueta que oferece estilo robusto e alta funcionalidade. Ajuste relaxado e atlético no corpo adequado para uso diário e também para atividades físicas. O náilon durável durará temporada após temporada para que você possa torná-lo uma peça essencial em sua coleção para os dias frios.</p>
             <p2>R$ 399,99</p2>
